2016-05-05  Peter Kollner <peter@asgalon.net>

	* Fixed bug #26772

2016-05-05  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.3.

2016-05-05  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.

2016-05-04  Peter Kollner <peter@asgalon.net>
	* Rearranged code in directories
	* added autoconf/automake support
	* z80asm.c refactored the file in a number of source and header files in src and include subdirs
	* fixed a bug in macro parameter handling for more than one parameter
	* fixed anothe rbug with local labels in macros
	* fixed a bug with whitespace after comma in defb lists inhibited string parsing
	* added quote escape support in string data (a bit ugly, perhaps)
	* added string storage facility to improve memory and label management
	* added new test lines  for macro testing
	* rearranged headers and documentation files foor autoconf install procedure

2009-04-11  Bas Wijnen  <wijnen@debian.org>

	* z80asm.c: Fixed bug that defw/dw didn't accept more than one
	argument.

2009-01-18  Bas Wijnen  <wijnen@debian.org>

	* expressions.c: Fix incorrect valid declaration of expressions when
	only the last label is valid.  Thanks to Tomaž Šolc for reporting.

2007-09-09  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c: Wrap program counter consistently.
	* z80asm.c, z80asm.h: Fix error reporting in references.
	* all files: Update license to GPL version 3 or later.
	* Makefile: Improve make dist, and make it work with git.

2007-06-14  Bas Wijnen  <shevek@fmf.nl>

	* VERSION: Updated to 1.5
	* z80asm.c, z80asm.h: Fix handling of $ in stored expressions (thanks
	to Tomaz Solc for reporting and analysing this.
	* Makefile: Remove executable if tests fail.
	* tests/pass.asm, tests/pass.correct-bin: Add some tests.
	* z80asm.c: Make unresolvable references a normal error (instead of an